# krestiki

./: .clang-tidy  .travis.yml  CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt  calc.cpp  lib.cpp  lib.hpp  main.cpp  test.cpp
